src/assets/base.css
html {
   font-family: 'AR', sans-serif;
   letter-spacing: 1px;
}

body {
  color: var(--bClr4);
  margin: 0;
}

* {
  box-sizing: border-box;
  /* background-color: transparent;
  outline: 1px solid black; */
}

dialog {
  background: var(--clr10);
  border: none;
}

a {
  text-decoration: none;
  color: inherit;
}

.primary-btn {
  background: none;
  border: none;
  background-color: var(--bClr3);
  border-radius: var(--br);
  color: var(--bClr2);
  font-weight: 600;
  letter-spacing: 0.1em;
  display: grid;
  place-content: center;
  /* background-image: url('@/assets/images/recipe/R-1.jpeg'); */
}


.secondary-btn {
  font-size: 1rem;
  border: none;
  background-color: var(--bClr2);
  outline: 1px solid var(--bClr3);
  color: var(--bClr3);
  border-radius: var(--br);
}

.error-btn{
  border: none;
  background-color: var(--bClr2);
  outline: 1px solid var(--clr12);
  color: var(--clr12);
  padding: 0.5rem 0.8rem;
  border-radius: var(--br);
}
.icon {
  border: none;
  background: none;
  box-shadow: 0 0 2px 0 var(--clr7);
  border-radius: 0.5rem;
}

.blur-bg {
  border-radius: 0.5rem;
}

